# trainer_ai_agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  main.py
src/agents/: Untitled-1.html  coordinator_agent.py  curator_agent.py  evaluator_agent.py  nn.html  second.html
src/agents/templates/: chat.html
